syntax = "proto3";

// Make sure this file is up to date with src/types/QRCodeData.ts and src/types/RadioPacketData.ts

message QrCodeData {
    QrCodeType qrType = 1;
    string version = 2;

    optional MatchScoutingData matchScoutingData = 3;
    optional ScheduleData scheduleData = 4;
    optional PickListData pickListData = 5;
}

enum QrCodeType {
    MatchData = 0;
    Schedule = 1;
    PickList = 2;
}

// Scouting Data

message MatchScoutingData {
    repeated MatchData entries = 1;
}

message MatchData {
    // header
    uint32 id = 0;
    string matchId = 1;
    uint32 teamNumber = 2;
    AllianceColor allianceColor = 3;

    // fields ## EDIT THESE ##
    // Prematch
    float autoStartPositionX = 7;
    float autoStartPositionY = 8;
    HumanPlayerLocation humanPlayerLocation = 50;
    // Auto
    uint32 autoCoralL1Score = 9;
    uint32 autoCoralL1Miss = 10;
    repeated CoralScoreLocation autoCoralL2ScoreLocations = 51;
    uint32 autoCoralL2Score = 11;
    uint32 autoCoralL2Miss = 12;
    repeated CoralScoreLocation autoCoralL3ScoreLocations = 52;
    uint32 autoCoralL3Score = 13;
    uint32 autoCoralL3Miss = 14;
    repeated CoralScoreLocation autoCoralL4ScoreLocations = 53;
    uint32 autoCoralL4Score = 15;
    uint32 autoCoralL4Miss = 16;
    uint32 autoAlgaeScore = 17;
    uint32 autoAlgaeMiss = 18;
    uint32 autoAlgaeNetScore = 19;
    uint32 autoAlgaeNetMiss = 20;
    bool autoCoralGroundIntake = 21;
    bool autoCoralStationIntake = 22;
    bool autoAlgaeGroundIntake = 23;
    bool autoAlgaeReefIntake = 24;
    bool autoRemoveL2Algae = 25;
    bool autoRemoveL3Algae = 26;
    // Teleop
    uint32 teleopCoralL1Score = 27;
    uint32 teleopCoralL1Miss = 28;
    repeated CoralScoreLocation teleopCoralL2ScoreLocations = 54;
    uint32 teleopCoralL2Score = 29;
    uint32 teleopCoralL2Miss = 30;
    repeated CoralScoreLocation teleopCoralL3ScoreLocations = 55;
    uint32 teleopCoralL3Score = 31;
    uint32 teleopCoralL3Miss = 32;
    repeated CoralScoreLocation teleopCoralL4ScoreLocations = 56;
    uint32 teleopCoralL4Score = 33;
    uint32 teleopCoralL4Miss = 34;
    uint32 teleopAlgaeScore = 35;
    uint32 teleopAlgaeMiss = 36;
    uint32 teleopAlgaeNetScore = 37;
    uint32 teleopAlgaeNetMiss = 38;
    bool teleopCoralGroundIntake = 39;
    bool teleopCoralStationIntake = 40;
    bool teleopAlgaeGroundIntake = 41;
    bool teleopAlgaeReefIntake = 42;
    bool teleopRemoveL2Algae = 43;
    bool teleopRemoveL3Algae = 44;
    uint32 teleopHumanPlayerAlgaeScore = 45;
    uint32 teleopHumanPlayerAlgaeMiss = 46;
    // Endgame
    float timeDefending = 47;
    repeated Observation observations = 48;
    string notes = 49;

    // footer
    string scoutName = 4;
    uint64 matchStart = 5;
    uint64 submitTime = 6;
}

enum AllianceColor {
    Red = 0;
    Blue = 1;
}

enum HumanPlayerLocation {
    Unknown = 0;
    None = 1;
    CoralStation = 2;
    Processor = 3;
}

enum Observation {
    Tippy = 0;
    DroppingCoral = 1;
    DroppingAlgae = 2;
    DifficultyAligningScore = 3;
    DifficultyAligningIntake = 4;
    Immobilized = 5;
    DisabledPartially = 6;
    DisabledFully = 7;
}

enum CoralScoreLocation {
    A = 0;
    B = 1;
    C = 2;
    D = 3;
    E = 4;
    F = 5;
    G = 6;
    H = 7;
    I = 8;
    J = 9;
    K = 10;
    L = 11;
}

// Schedule Data

message ScheduleData {
    repeated ScheduledMatch schedule = 1;
    bool fieldRotated = 2;
    string competitionId = 3;
    uint32 currentMatch = 4;
}

message ScheduledMatch {
    string matchId = 1;
    uint32 blue1 = 2;
    uint32 blue2 = 3;
    uint32 blue3 = 4;
    uint32 red1 = 5;
    uint32 red2 = 6;
    uint32 red3 = 7;
}

// Pick List Data

message PickListData {
    repeated uint32 pickList = 1;
    repeated uint32 crossedOut = 2;
    string competitionId = 3;
}


////////////////////////
//  Radio Packet Data //
////////////////////////


message RadioPacketData {
    RadioPacketType packetType = 1;
    string version = 2;

    optional MatchScoutingData matchScoutingData = 3;
    optional MatchRequestData matchRequestData = 4;
    optional ClientIDData clientIDData = 5;
}

enum RadioPacketType {
    MatchDataBroadcast = 0;
    MatchDataRequest = 1;
    ClientIDBroadcast = 2;
}

message MatchRequestData {
    string competitionId = 1;
    repeated uint32 knownMatches = 2;
}

message ClientIDData {
    uint32 clientID = 1;
    optional string scoutName = 2;
}